# djbs-theme

./: .gitignore  README.md  README.pt-br.md  __init__.py  _version.py  context_processors.py  global_djbs_settings.py  pyproject.toml
docs/: admin_changelist.rst  admin_index.rst  conf.py  context_variables.rst  index.rst  installation_instructions.rst  menu_system.rst  model_admin_options.rst  settings_and_customization.rst  template_tags_and_filters.rst
src/djbs/: __init__.py  apps.py  context_processors.py  djbs_constants.py  global_djbs_settings.py
src/djbs/static/css/: base.css  related_widget_wrapper.css
src/djbs/static/js/: theme.js
src/djbs/templates/: 404.html  500.html  base.html  color_theme_toggle.html  sidenav_menu.html
src/djbs/templatetags/: djbs_extras.py
static/js/: sidenav_menu.js  theme.js
templates/: base-bkp.html  base.html  color_theme_toggle.html
templates/admin/: actions.html  app_list.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  invalid_setup.html  object_history.html  pagination.html  search_form.html  submit_line.html
templates/admin/edit_inline/: stacked.html  tabular.html
templates/admin/includes/: change_form_tabs.html  fieldset.html  object_delete_summary.html
templates/admin/widgets/: split_datetime.html
templates/django/forms/: attrs.html
templates/menus/: menu.html
templatetags/: djbs_extras.py
(+54 files in other folders)
